Filter media by type

--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
   <div class="container">
     <div id="media-list">
       <h1>{{ title }}</h1>
-      <select>
+      <select v-on:change="filterItem">
         <option>Select a type of media...</option>
+        <option v-for="item in mediaList">{{item.type}}</option>
       </select>
        <ul>
-        <li v-for="media in mediaList" v-on:click="toggleDetails(media)">
+        <li v-show="type === media.type" 
+            v-for="media in mediaList" 
+            v-on:click="toggleDetails(media)">
           <h3>{{media.title}}</h3> 
           <div v-show="media.showDetail">
             <p>{{media.description}}</p>
