Remove duplications using computed properties

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div id="media-list">
       <h1>{{ title }}</h1>
       <select v-on:change="filterItem">
-        <option>Select a type of media...</option>
-        <option v-for="item in mediaList">{{item.type}}</option>
+        <option value="">Select a type of media...</option>
+        <option v-for="item in uniqueItemsTypeList">{{item}}</option>
       </select>
        <ul>
-        <li v-show="type === media.type" 
+        <li v-show="type === '' || type === media.type" 
             v-for="media in mediaList" 
             v-on:click="toggleDetails(media)">
           <h3>{{media.title}}</h3> 
