Add conditionally more and less icons, add styles according to media types

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
        <ul>
         <li v-show="type === '' || type === media.type" 
             v-for="media in mediaList" 
-            v-on:click="toggleDetails(media)">
+            v-on:click="toggleDetails(media)"
+            v-bind:class="[media.showDetail ? 'less' : 'more', media.type.toLowerCase()]">
           <h3>{{media.title}}</h3> 
           <div v-show="media.showDetail">
             <p>{{media.description}}</p>
